Buy -> join for free

--- a/templates/index/hero.html
+++ b/templates/index/hero.html
@@ -5,7 +5,7 @@
     <h1 class="display-3 text-bold">Learn Stuff</h1>
     <h5 class="text-gray-soft text-regular">Automate sending and receiving money on the internet with Bitcoin Cash and Python.</h5>
     <a href="#">
-      <h5 class="mt-3">Get your ticket now!</h5>
+      <h5 class="mt-3">Join the class for free now!</h5>
     </a>
   </div>
 </section>
