--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
           <img src="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack.png" height="40">
         </a>
 
-        <a href="#" class="btn btn-primary btn-lg">Buy a ticket</a>
+        <a href="#" class="btn btn-primary btn-lg">Join Now</a>
 
       </div>
     </nav>
