--- a/templates/index/intro.html
+++ b/templates/index/intro.html
@@ -1,1 +1,29 @@
+<section class="container py-5">
+  <div class="row">
 
+    <div class="col-sm-4">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <p>Something</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <p>Something</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <p>Something</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
