--- a/templates/index/intro.html
+++ b/templates/index/intro.html
@@ -4,7 +4,7 @@
     <div class="col-sm-4">
       <div class="card shadow-sm">
         <div class="card-body">
-          <p>Something</p>
+          <p>Learn the fundamentals of Bitcoin from a developer point of view.</p>
         </div>
       </div>
     </div>
@@ -12,7 +12,7 @@
     <div class="col-sm-4">
       <div class="card shadow-sm">
         <div class="card-body">
-          <p>Something</p>
+          <p>Learn how to integrate Bitcoin Cash payments into your app or website.</p>
         </div>
       </div>
     </div>
@@ -20,7 +20,7 @@
     <div class="col-sm-4">
       <div class="card shadow-sm">
         <div class="card-body">
-          <p>Something</p>
+          <p>Learn how to send data to and read from the blockchain.</p>
         </div>
       </div>
     </div>
