Logo replaced (bitcash)

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
       <div class="container">
 
         <a class="navbar-brand" href="/">
-          <img src="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack.png" height="40">
+          <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="40">
         </a>
 
         <a href="#" class="btn btn-primary btn-lg">Join Now</a>
