--- a/templates/index/hero.html
+++ b/templates/index/hero.html
@@ -1,8 +1,8 @@
 <!-- Hero header -->
 <section class="text-center py-5">
   <div class="container">
-    <img src="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack.png" srcset="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack.png 1x, https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/elements/bootstrap-stack@2x.png 2x">
-    <h1 class="display-3 text-bold">Learn Stuff</h1>
+    <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="150">
+    <h1 class="text-bold">Program Money</h1>
     <h5 class="text-gray-soft text-regular">Automate sending and receiving money on the internet with Bitcoin Cash and Python.</h5>
     <a href="#">
       <h5 class="mt-3">Join the class for free now!</h5>
