--- a/templates/base.html
+++ b/templates/base.html
@@ -35,5 +35,24 @@
     {% block body %}
     {% endblock %}
 
+    <footer class="bg-light py-5">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-6">
+            <ul class="list-unstyled">
+              <li><a href="/">Home</a></li>
+              <li>Join the class for free</li>
+            </ul>
+          </div>
+
+          <div class="col-6 text-right">
+            <!-- Right side -->
+          </div>
+
+        </div>
+      </div>
+    </footer>
+
   </body>
 </html>
