Branding updated (dark colo)

--- a/templates/index/hero.html
+++ b/templates/index/hero.html
@@ -1,5 +1,5 @@
 <!-- Hero header -->
-<section class="text-center py-5">
+<section class="text-center py-5 text-light bg-dark">
   <div class="container">
     <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="150">
     <h1 class="text-bold">Program Money</h1>
@@ -9,3 +9,7 @@
     </a>
   </div>
 </section>
+
+<div class="section-after-wrapper">
+  <span class="section-after"></span>
+</div>
