--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,19 @@
 /* Custom Styles */
 
+.section-after-wrapper {
+  position: relative;
+}
+
+.section-after {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 1.8vw;
+  background-image: url(/static/img/section-after.png);
+  background-size: cover;
+}
+
 /* Cards */
 .card {
   border: none;
