--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white mt-3">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
       <div class="container">
 
         <a class="navbar-brand" href="/">
@@ -35,12 +35,12 @@
     {% block body %}
     {% endblock %}
 
-    <footer class="bg-light py-5">
+    <footer class="bg-dark py-5">
       <div class="container">
         <div class="row">
 
           <div class="col-6">
-            <ul class="list-unstyled">
+            <ul class="list-unstyled text-white">
               <li><a href="/">Home</a></li>
               <li>Join the class for free</li>
             </ul>
