--- a/templates/index/hero.html
+++ b/templates/index/hero.html
@@ -2,8 +2,8 @@
 <section class="text-center py-5 text-light bg-dark">
   <div class="container">
     <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="150">
-    <h1 class="text-bold">Program Money</h1>
-    <h5 class="text-gray-soft text-regular">Automate sending and receiving money on the internet with Bitcoin Cash and Python.</h5>
+    <h1 class="text-bold my-4">Program Money</h1>
+    <h5>Automate sending and receiving money on the internet with Bitcoin Cash and Python.</h5>
     <a href="#">
       <h5 class="mt-3">Join the class for free now!</h5>
     </a>
