--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,11 @@
 /* Custom Styles */
 
+/* Hero */
+.hero {
+  padding-bottom: 90px;
+}
+
+/* Section Rounded */
 .section-after-wrapper {
   position: relative;
 }
