--- a/templates/index/hero.html
+++ b/templates/index/hero.html
@@ -1,5 +1,5 @@
 <!-- Hero header -->
-<section class="text-center py-5 text-light bg-dark">
+<section class="hero text-center pt-5 text-light bg-dark">
   <div class="container">
     <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="150">
     <h1 class="text-bold my-4">Program Money</h1>
