--- a/templates/index/hero.html
+++ b/templates/index/hero.html
@@ -2,11 +2,12 @@
 <section class="hero text-center pt-5 text-light bg-dark">
   <div class="container">
     <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="150">
+
     <h1 class="text-bold my-4">Program Money</h1>
+
     <h5>Automate sending and receiving money on the internet with Bitcoin Cash and Python.</h5>
-    <a href="#">
-      <h5 class="mt-3">Join the class for free now!</h5>
-    </a>
+
+    <h5 class="mt-3"><a href="#">Join the class now for free! <i class="fas fa-external-link-square-alt"></i></a></h5>
   </div>
 </section>
 
