--- a/templates/index/intro.html
+++ b/templates/index/intro.html
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-sm-4">
-      <div class="card shadow-sm">
+      <div class="card">
         <div class="card-body">
           <p>Learn the fundamentals of Bitcoin development.</p>
         </div>
@@ -10,7 +10,7 @@
     </div>
 
     <div class="col-sm-4">
-      <div class="card shadow-sm">
+      <div class="card">
         <div class="card-body">
           <p>Learn how to integrate Bitcoin Cash payments into your app or website.</p>
         </div>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="col-sm-4">
-      <div class="card shadow-sm">
+      <div class="card">
         <div class="card-body">
           <p>Learn how to send data to and read from the blockchain.</p>
         </div>
