--- a/templates/index/intro.html
+++ b/templates/index/intro.html
@@ -4,7 +4,7 @@
     <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
-          <p>Learn the fundamentals of Bitcoin development.</p>
+          <p>Learn the fundamentals of Bitcoin development with Python.</p>
         </div>
       </div>
     </div>
