Added Event Bribe Link var

--- a/templates/index/hero.html
+++ b/templates/index/hero.html
@@ -7,7 +7,7 @@
 
     <h5>Automate sending and receiving money on the internet with Bitcoin Cash and Python.</h5>
 
-    <h5 class="mt-3"><a href="#">Join the class now for free! <i class="fas fa-external-link-square-alt"></i></a></h5>
+    <h5 class="mt-3"><a href="{{ eb_link }}">Join the class now for free! <i class="fas fa-external-link-square-alt"></i></a></h5>
   </div>
 </section>
 
