--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
           <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="40">
         </a>
 
-        <a href="#" class="btn btn-primary btn-lg">Join Now</a>
+        <a href="{{ eb_link }}" class="btn btn-primary btn-lg">Join Now</a>
 
       </div>
     </nav>
@@ -42,7 +42,7 @@
           <div class="col-6">
             <ul class="list-unstyled text-white">
               <li><a href="/">Home</a></li>
-              <li>Join the class for free</li>
+              <li><a href="{{ eb_link }}">Join the class for free</a></li>
             </ul>
           </div>
 
