--- a/templates/index/goal.html
+++ b/templates/index/goal.html
@@ -1,8 +1,14 @@
-<section class="container py-5">
-  <div class="row">
+<section class="container pb-5">
+  <h3 class="text-center">What you will build</h3>
 
-    <div class="col-sm-4">
-      <p>What you will build:</p>
+  <div class="row pt-5">
+
+    <div class="col-md-6 text-center">
+      <img src="https://www.bitcoincash.org/img/general-address.png" height="200" alt="QR code">
+    </div>
+
+    <div class="col-md-6">
+      A payment processor for your website
     </div>
 
   </div>
