--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,6 @@
   {% include 'index/hero.html' %}
   {% include 'index/intro.html' %}
   {% include 'index/goal.html' %}
+  {% include 'index/stack.html' %}
 
 {% endblock %}
