Added prerequisite file

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,6 @@
   {% include 'index/intro.html' %}
   {% include 'index/goal.html' %}
   {% include 'index/stack.html' %}
+  {% include 'index/prerequisites.html' %}
 
 {% endblock %}
