Tech stack spaced

--- a/templates/index/stack.html
+++ b/templates/index/stack.html
@@ -4,23 +4,23 @@
   <div class="row pt-4 d-flex justify-content-center">
 
     <!-- Flask -->
-    <a href="http://flask.pocoo.org" target="_blank">
+    <a class="mx-5 my-4" href="http://flask.pocoo.org" target="_blank">
       <img src="http://flask.pocoo.org/docs/1.0/_static/flask.png" height="50" alt="Flask">
     </a>
     <!-- Python -->
-    <a href="https://python.org" target="_blank">
+    <a class="mx-5 my-4" href="https://python.org" target="_blank">
       <img src="/static/img/stack/python.png" height="50" alt="Python3">
     </a>
     <!-- HTML -->
-    <a href="https://whatwg.org" target="_blank">
+    <a class="mx-5 my-4" href="https://whatwg.org" target="_blank">
       <img src="/static/img/stack/html.svg" height="50" alt="HTML5">
     </a>
     <!-- Bootstrap -->
-    <a href="https://getbootstrap.com" target="_blank">
+    <a class="mx-5 my-4" href="https://getbootstrap.com" target="_blank">
       <img src="/static/img/stack/bootstrap.svg" height="50" alt="Bootstrap4">
     </a>
     <!-- BitCash -->
-    <a href="https://sporestack.github.io/bitcash/" target="_blank">
+    <a class="mx-5 my-4" href="https://sporestack.github.io/bitcash/" target="_blank">
       <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="50" alt="Bootstrap4">
     </a>
 
