--- a/templates/index/intro.html
+++ b/templates/index/intro.html
@@ -1,7 +1,7 @@
 <section class="container py-5">
   <div class="row">
 
-    <div class="col-sm-4">
+    <div class="col-sm-4 my-3">
       <div class="card">
         <div class="card-body">
           <p>Learn the fundamentals of Bitcoin development with Python.</p>
@@ -9,7 +9,7 @@
       </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-4 my-3">
       <div class="card">
         <div class="card-body">
           <p>Learn how to integrate Bitcoin Cash payments into your app or website.</p>
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-4 my-3">
       <div class="card">
         <div class="card-body">
           <p>Learn how to send data to and read from the blockchain.</p>
