--- a/templates/index/intro.html
+++ b/templates/index/intro.html
@@ -3,7 +3,8 @@
 
     <div class="col-sm-4 my-3">
       <div class="card">
-        <div class="card-body">
+        <div class="card-body text-center">
+          <i class="text-primary fab fa-bitcoin fa-2x pb-3"></i>
           <p>Learn the fundamentals of Bitcoin development with Python.</p>
         </div>
       </div>
@@ -11,7 +12,8 @@
 
     <div class="col-sm-4 my-3">
       <div class="card">
-        <div class="card-body">
+        <div class="card-body text-center">
+          <i class="text-primary far fa-window-restore fa-2x pb-3"></i>
           <p>Learn how to integrate Bitcoin Cash payments into your app or website.</p>
         </div>
       </div>
@@ -19,7 +21,8 @@
 
     <div class="col-sm-4 my-3">
       <div class="card">
-        <div class="card-body">
+        <div class="card-body text-center">
+          <i class="text-primary fas fa-cubes fa-2x pb-3"></i>
           <p>Learn how to send data to and read from the blockchain.</p>
         </div>
       </div>
