Flask logo loaded locally

--- a/templates/index/stack.html
+++ b/templates/index/stack.html
@@ -9,7 +9,7 @@
     </a>
     <!-- Flask -->
     <a class="mx-5 my-4 zoom-in" href="http://flask.pocoo.org" target="_blank">
-      <img src="http://flask.pocoo.org/docs/1.0/_static/flask.png" height="50" alt="Flask">
+      <img src="/static/img/stack/flask.png" height="50" alt="Flask">
     </a>
     <!-- HTML -->
     <a class="mx-5 my-4 zoom-in" href="https://whatwg.org" target="_blank">
