--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -43,6 +43,16 @@ a:hover {
   background-size: cover;
 }
 
+.section-before {
+  position: absolute;
+  top: -1px;
+  left: 0px;
+  width: 100%;
+  height: 1.8vw;
+  background-image: url(/static/img/section-before.png);
+  background-size: cover;
+}
+
 /* Cards */
 .card {
   border: none;
