--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,13 @@
     {% block body %}
     {% endblock %}
 
+    <div class="section-after-wrapper">
+      <span class="section-before"></span>
+    </div>
+
     <footer class="bg-dark py-5">
       <div class="container">
-        <div class="row">
+        <div class="row pt-4">
 
           <div class="col-6">
             <ul class="list-unstyled text-white">
