--- a/templates/index/stack.html
+++ b/templates/index/stack.html
@@ -1,28 +1,29 @@
-<section class="container py-5">
-  <h3 class="text-center">Tech Stack</h3>
+<section class="py-5">
+  <div class="container">
+    <h3 class="text-center">Tech Stack</h3>
 
-  <div class="row pt-4 d-flex justify-content-center">
+    <div class="row pt-4 d-flex justify-content-center">
 
-    <!-- Python -->
-    <a class="mx-5 my-4 zoom-in" href="https://python.org" target="_blank">
-      <img src="/static/img/stack/python.png" height="50" alt="Python3">
-    </a>
-    <!-- Flask -->
-    <a class="mx-5 my-4 zoom-in" href="http://flask.pocoo.org" target="_blank">
-      <img src="/static/img/stack/flask.png" height="50" alt="Flask">
-    </a>
-    <!-- HTML -->
-    <a class="mx-5 my-4 zoom-in" href="https://whatwg.org" target="_blank">
-      <img src="/static/img/stack/html.svg" height="50" alt="HTML5">
-    </a>
-    <!-- Bootstrap -->
-    <a class="mx-5 my-4 zoom-in" href="https://getbootstrap.com" target="_blank">
-      <img src="/static/img/stack/bootstrap.svg" height="50" alt="Bootstrap4">
-    </a>
-    <!-- BitCash -->
-    <a class="mx-5 my-4 zoom-in" href="https://sporestack.github.io/bitcash/" target="_blank">
-      <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="50" alt="Bootstrap4">
-    </a>
-
+      <!-- Python -->
+      <a class="mx-5 my-4 zoom-in" href="https://python.org" target="_blank">
+        <img src="/static/img/stack/python.png" height="50" alt="Python3">
+      </a>
+      <!-- Flask -->
+      <a class="mx-5 my-4 zoom-in" href="http://flask.pocoo.org" target="_blank">
+        <img src="/static/img/stack/flask.png" height="50" alt="Flask">
+      </a>
+      <!-- HTML -->
+      <a class="mx-5 my-4 zoom-in" href="https://whatwg.org" target="_blank">
+        <img src="/static/img/stack/html.svg" height="50" alt="HTML5">
+      </a>
+      <!-- Bootstrap -->
+      <a class="mx-5 my-4 zoom-in" href="https://getbootstrap.com" target="_blank">
+        <img src="/static/img/stack/bootstrap.svg" height="50" alt="Bootstrap4">
+      </a>
+      <!-- BitCash -->
+      <a class="mx-5 my-4 zoom-in" href="https://sporestack.github.io/bitcash/" target="_blank">
+        <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="50" alt="Bootstrap4">
+      </a>
+    </div>
   </div>
 </section>
