--- a/templates/index/prerequisites.html
+++ b/templates/index/prerequisites.html
@@ -1,12 +1,17 @@
-<section class="container pb-5">
-  <h3 class="text-center">Prerequisites for this class</h3>
+<div class="section-after-wrapper">
+  <span class="section-before"></span>
+</div>
 
-  <div class="row pt-4 justify-content-center">
-    <p class="text-muted col-md-8 text-center">A basic understanding of programming and how the Web works are necessary to follow this class. Experience in Python programming and HTML markup is a plus.</p>
+<section class="bg-dark py-5">
+  <div class="container text-white pt-5">
+    <h3 class="text-center">Prerequisites for this class</h3>
+
+    <div class="row pt-4 justify-content-center">
+      <p class="col-md-8 text-center">A basic understanding of programming and how the Web works are necessary to follow this class. Experience in Python programming and HTML markup is a plus.</p>
+    </div>
+
+    <div class="row pt-4">
+      <a class="btn btn-primary mx-auto" href="{{ eb_link }}">Join Now</a>
+    </div>
   </div>
-
-  <div class="row pt-4">
-    <a class="btn btn-primary mx-auto" href="{{ eb_link }}">Join Now</a>
-  </div>
-
 </section>
