Added zoom-in to logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
       <div class="container">
 
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand zoom-in" href="/">
           <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="40">
         </a>
 
