--- a/templates/index/goal.html
+++ b/templates/index/goal.html
@@ -8,7 +8,8 @@
     </div>
 
     <div class="col-md-6">
-      A payment processor for your website
+      <p>A payment processor for your website</p>
+      <p>{{ address }}</p>
     </div>
 
   </div>
