QR code generated client-side

--- a/templates/index/goal.html
+++ b/templates/index/goal.html
@@ -3,8 +3,23 @@
 
   <div class="row pt-5">
 
-    <div class="col-md-6 text-center">
-      <img src="https://www.bitcoincash.org/img/general-address.png" height="200" alt="QR code">
+    <div class="col-md-6">
+
+      <script src="/static/js/qrcode.js"></script>
+
+      <div id="qrcode"></div>
+
+      <script type="text/javascript">
+      var qrcode = new QRCode(document.getElementById("qrcode"), {
+        text: "{{ address }}",
+        width: 128,
+        height: 128,
+        colorDark : "#000000",
+        colorLight : "#ffffff",
+        correctLevel : QRCode.CorrectLevel.M
+      });
+      </script>
+
     </div>
 
     <div class="col-md-6">
