--- a/templates/index/goal.html
+++ b/templates/index/goal.html
@@ -22,9 +22,9 @@
 
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6 mt-5 mt-md-0">
       <p>A payment processor for your website</p>
-      <p>{{ address }}</p>
+      <p class="text-truncate">{{ address }}</p>
     </div>
 
   </div>
