Added spinner loading logo

--- a/templates/index/goal.html
+++ b/templates/index/goal.html
@@ -6,7 +6,13 @@
     <div class="col-sm-10 col-md-8 col-lg-6 text-center card shadow">
       <div class="card-body">
 
-        <p>Send a small amount of Bitcoin Cash to the following address to try it</p>
+        <p class="text-muted">
+          Send a small amount of Bitcoin Cash to the following address to try it!
+          <br>
+          Don't worry, you will be able to withdraw it back right after 😀
+        </p>
+
+        <i class="fas fa-circle-notch fa-spin float-right"></i>
 
         <script src="/static/js/qrcode.js"></script>
         <a href="{{ address }}">
