Added payment received checkmark

--- a/templates/index/goal.html
+++ b/templates/index/goal.html
@@ -15,9 +15,10 @@
         <i class="fas fa-circle-notch fa-spin float-right"></i>
 
         <script src="/static/js/qrcode.js"></script>
+        <div id="qrcode"></div>
+
         <a href="{{ address }}">
-          <div id="qrcode"></div>
-          <p class="text-truncate">{{ address }}</p>
+          <p class="text-truncate mt-3">{{ address }}</p>
         </a>
 
         <!-- <p>{{ wif }}</p> -->
@@ -46,7 +47,8 @@
 
         function check_payment(new_balance) {
           if (new_balance > balance) {
-            alert('payment received'); // do something awesome instead of and alert
+            var qrcode_html = document.getElementById('qrcode');
+            qrcode_html.innerHTML = '<svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/><path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/></svg>';
             balance = new_balance;
           } else {
             // Logging for debug
