--- a/templates/index/goal.html
+++ b/templates/index/goal.html
@@ -21,7 +21,7 @@
           <a href="{{ address }}">{{ address }}</a>
         </p>
 
-        <p class="d-none btn btn-outline-primary" id="wif" onclick="show_wif()">Withdraw your funds</p>
+        <p class="d-none btn btn-outline-primary pointer" id="wif" onclick="show_wif()">Withdraw your funds</p>
 
 
         <div id="wif-qr"></div>
