Fix bitcash logo link

--- a/templates/index/hero.html
+++ b/templates/index/hero.html
@@ -1,7 +1,7 @@
 <!-- Hero header -->
 <section class="hero text-center pt-5 text-light bg-dark">
   <div class="container">
-    <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="150">
+    <img src="https://pybitcash.github.io/bitcash/_static/bitcash.png" height="150">
 
     <h1 class="text-bold my-4">Program Money</h1>
 
