--- a/templates/base.html
+++ b/templates/base.html
@@ -1,58 +1,58 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Corentin Mercier">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="Corentin Mercier">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/static/css/custom.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="/static/css/custom.css">
 
-    <!-- Fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <!-- Fonts -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
-    <title>Program Bitcoin Cash with Python</title>
+  <title>Program Bitcoin Cash with Python</title>
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
-      <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
+    <div class="container">
 
-        <a class="navbar-brand zoom-in" href="/">
-          <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="40">
-        </a>
+      <a class="navbar-brand zoom-in" href="/">
+        <img src="https://pybitcash.github.io/bitcash/_static/bitcash.png" height="40">
+      </a>
 
-        <a href="{{ eb_link }}" class="btn btn-primary btn-lg">Join Now</a>
+      <a href="{{ eb_link }}" class="btn btn-primary btn-lg">Join Now</a>
 
-      </div>
-    </nav>
+    </div>
+  </nav>
 
-    {% block body %}
-    {% endblock %}
+  {% block body %}
+  {% endblock %}
 
-    <footer class="bg-dark py-5">
-      <div class="container">
-        <div class="row pt-4">
+  <footer class="bg-dark py-5">
+    <div class="container">
+      <div class="row pt-4">
 
-          <div class="col-6">
-            <ul class="list-unstyled text-white">
-              <li><a href="/">Home</a></li>
-              <li><a href="{{ eb_link }}">Join the class for free</a></li>
-            </ul>
-          </div>
-
-          <div class="col-6 text-right">
-            <!-- Right side -->
-          </div>
-
+        <div class="col-6">
+          <ul class="list-unstyled text-white">
+            <li><a href="/">Home</a></li>
+            <li><a href="{{ eb_link }}">Join the class for free</a></li>
+          </ul>
         </div>
-      </div>
-    </footer>
 
-  </body>
+        <div class="col-6 text-right">
+          <!-- Right side -->
+        </div>
+
+      </div>
+    </div>
+  </footer>
+
+</body>
 </html>
