--- a/templates/index/stack.html
+++ b/templates/index/stack.html
@@ -22,7 +22,7 @@
       </a>
       <!-- BitCash -->
       <a class="mx-5 my-4 zoom-in" href="https://sporestack.github.io/bitcash/" target="_blank">
-        <img src="https://sporestack.github.io/bitcash/_static/bitcash.png" height="50" alt="Bootstrap4">
+        <img src="https://pybitcash.github.io/bitcash/_static/bitcash.png" height="50" alt="Bootstrap4">
       </a>
     </div>
   </div>
