--- a/templates/index/stack.html
+++ b/templates/index/stack.html
@@ -21,7 +21,7 @@
         <img src="/static/img/stack/bootstrap.svg" height="50" alt="Bootstrap4">
       </a>
       <!-- BitCash -->
-      <a class="mx-5 my-4 zoom-in" href="https://sporestack.github.io/bitcash/" target="_blank">
+      <a class="mx-5 my-4 zoom-in" href="https://pybitcash.github.io/bitcash/" target="_blank">
         <img src="https://pybitcash.github.io/bitcash/_static/bitcash.png" height="50" alt="Bootstrap4">
       </a>
     </div>
